# identity

./: .gitignore  README.md  app.py  celery_worker.py  create_test_db.py  example.env  live.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.common  requirements.dev  requirements.dev.in  requirements.in  requirements.txt  requirements.txt.old  tatus  test_random_ids.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 1b08d7a2e0a7_add_short_numbers.py  4192b21cd22e_unique_user.py  6b5fa54f6efc_soft_delete_for_labels.py  eb893fd8080e_add_civicrm_study_id_to_study.py
documentation/pds/: Requirements Pack - Table of Contents.docx  Safety Case Guidelines DCB0129 and DCB0160.docx  Supplier Conformance Assessment List_SCAL_vsn2.0 Published.xlsx
identity/: __init__.py  admin.py  celery.py  config.py  database.py  emailing.py  model.py  security.py  setup.py  standard_views.py  string_comparisons.py  string_functions.py  template_filters.py  utils.py  validators.py
identity/api/: __init__.py  decorators.py  model.py
identity/blinding/: __init__.py  model.py
identity/demographics/: __init__.py  data_conversions.py  model.py  smsp.py
identity/ecrfs/: __init__.py  model.py
identity/etl/: __init__.py  model.py
identity/model/: __init__.py  blinding.py  civicrm.py  edge.py  id.py  printing.py  security.py  sex.py
identity/printing/: __init__.py  brave.py  (+23 more)
migrations/: migrate.cfg
tests/: __init__.py  conftest.py  faker.py  faker_civicrm.py  faker_demographics.py  faker_etl_central.py  mocks.py  test_validators.py
(+599 files in other folders)
